--- a/node-express-mongodb/package.json
+++ b/node-express-mongodb/package.json
@@ -2,10 +2,12 @@
   "name": "express-mongodb",
   "version": "1.0.0",
   "description": "crud application with express and mongodb",
-  "main": "server.js",
+  "main": "server.ts",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon server.js"
+    "start": "nodemon dist/server.js",
+    "dev": "ts-node server.ts",
+    "build": "tsc --w"
   },
   "keywords": [
     "crud",
@@ -14,13 +16,22 @@
   "author": "pho",
   "license": "ISC",
   "dependencies": {
+    "@types/ejs": "^3.1.0",
+    "@types/morgan": "^1.9.3",
     "axios": "^0.22.0",
     "body-parser": "^1.19.0",
     "dotenv": "^10.0.0",
     "ejs": "^3.1.6",
     "express": "^4.17.1",
-    "mongoose": "^6.0.9",
+    "mongoose": "^5.13.8",
     "morgan": "^1.10.0",
-    "nodemon": "^2.0.13"
+    "nodemon": "^2.0.13",
+    "typescript": "^4.4.4"
+  },
+  "devDependencies": {
+    "@types/express": "^4.17.13",
+    "@types/mongoose": "^5.11.97",
+    "@types/node": "^16.10.9",
+    "ts-node": "^10.3.0"
   }
 }
