--- a/Nodejs/package.json
+++ b/Nodejs/package.json
@@ -5,7 +5,8 @@
   "main": "server.js",
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
-    "start": "nodemon --exec babel-node src/server.js"
+    "start": "nodemon --exec babel-node src/server.js",
+    "dev": "ts-node src/server.ts"
   },
   "keywords": [
     "fullstack",
@@ -24,12 +25,23 @@
     "express": "^4.17.1",
     "lodash": "^4.17.21",
     "mysql2": "^2.2.5",
-    "sequelize": "^6.6.2"
+    "reflect-metadata": "^0.1.13",
+    "sequelize": "^6.7.0",
+    "sequelize-typescript": "^2.1.1",
+    "ts-node": "^10.3.0",
+    "typescript": "^4.4.4"
   },
   "devDependencies": {
     "@babel/core": "^7.12.10",
     "@babel/node": "^7.12.10",
     "@babel/preset-env": "^7.12.10",
+    "@types/bcryptjs": "^2.4.2",
+    "@types/bluebird": "^3.5.36",
+    "@types/express": "^4.17.13",
+    "@types/lodash": "^4.14.175",
+    "@types/node": "^16.10.9",
+    "@types/sequelize": "^4.28.10",
+    "@types/validator": "^13.6.3",
     "nodemon": "^2.0.7",
     "sequelize-cli": "^6.2.0"
   }
