--- a/.gitignore
+++ b/.gitignore
@@ -1,8 +1,47 @@
+# compiled output
+/dist
 /node_modules
 /vendor
+
+# Logs
+logs
+*.log
+npm-debug.log*
+pnpm-debug.log*
+yarn-debug.log*
+yarn-error.log*
+lerna-debug.log*
+tsconfig.tsbuildinfo
+package-lock.json
+
+# OS
+.DS_Store
+
+# Tests
+/coverage
+/.nyc_output
+
+# IDEs and editors
 /.idea
 .idea/
 .env
+.project
+.classpath
+.c9/
+*.launch
+.settings/
+*.sublime-workspace
+
+# IDE - VSCode
+.vscode/*
+!.vscode/settings.json
+!.vscode/tasks.json
+!.vscode/launch.json
+!.vscode/extensions.json
+
+# Environment
+.env 
+
 
 design-DB-Backend.xlsx
 /img/
